--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <title>Meme Gen</title>
   </head>
   <body onload="onInit()">
-    <!-- <div class="main-screen"></div> -->
+    <div class="main-screen screen" onclick="onToggleMenu(event)"></div>
     <header class="main-header gradient-background">
       <div class="main-container flex align-center space-between">
         <img class="logo" src="images/LOGO.png" />
         <ul class="main-nav clean-list flex justify-center">
-          <li><a class="btn-gallery" href="#" onclick="onOpenGallery(event)">Gallery</a></li>
+          <li>
+            <a class="btn-gallery" href="#" onclick="onOpenGallery(event)"
+              >Gallery</a
+            >
+          </li>
           <li><a class="btn-about" href="#">About</a></li>
-          <li><a class="btn-about" href="#">Hello</a></li>
+          <li><a class="btn-about" href="#">Memes</a></li>
         </ul>
+        <button class="menu-btn" onclick="onToggleMenu(event)">☰</button>
       </div>
     </header>
     <main class="main-container">
@@ -27,77 +32,88 @@
           </div>
         </div>
         <section class="control-panel">
-            <label for="meme-txt"></label>
+          <label for="meme-txt"></label>
+          <input
+            class="meme-text"
+            type="text"
+            name="meme-text"
+            oninput="writeMemeTxt(this)"
+          />
+          <div class="ctrl-btns flex justify-center">
+            <button class="ctrl-btn switch" onclick="onSwitchLines(event)">
+              S
+            </button>
+            <button class="ctrl-btn add-line" onclick="onCreateNewLine(event)">
+              Add
+            </button>
+            <button class="ctrl-btn delete-line" onclick="onDeleteLine(event)">
+              Del
+            </button>
+            <button class="ctrl-btn up" onclick="onMoveText(event, -5)">
+              U
+            </button>
+            <button class="ctrl-btn down" onclick="onMoveText(event, 5)">
+              D
+            </button>
+          </div>
+          <div class="font-editor grid">
+            <button class="ctrl-btn bigger" onclick="onChangeFontSize(event,2)">
+              +
+            </button>
+            <button
+              class="ctrl-btn bigger"
+              onclick="onChangeFontSize(event,-2)"
+            >
+              -
+            </button>
             <input
-              class="meme-text"
-              type="text"
-              name="meme-text"
-              oninput="writeMemeTxt(this)"
+              type="color"
+              class="ctrl-btn change-color"
+              onchange="onChangeColor(event,this)"
             />
-            <div class="ctrl-btns flex justify-center">
-              <button
-                class="ctrl-btn  switch"
-                onclick="onSwitchLines(event)"
-              >
-                S
-              </button>
-              <button
-                class="ctrl-btn  up"
-                onclick="onMoveText(event, -5)"
-              >
-                U
-              </button>
-              <button
-                class="ctrl-btn  down"
-                onclick="onMoveText(event, 5)"
-              >
-                D
-              </button>
-            </div>
-            <div class="font-editor grid">
-              <button
-                class="ctrl-btn bigger"
-                onclick="onChangeFontSize(event,2)"
-              >
-                +
-              </button>
-              <button
-                class="ctrl-btn bigger"
-                onclick="onChangeFontSize(event,-2)"
-              >
-                -
-              </button>
-              <select class="font-selector" onchange="onChangeFont(event,this)">
-                <option value="impact">impact</option>
-                <option value="Times New Roman">Times New Roman</option>
-                <option value="Verdana">Verdana</option>
-                <option value="Comic sans MS">Comic sans MS</option>
-                <option value="WildWest">WildWest</option>
-                <option value="Bedrock">Bedrock</option>
-              </select>
-            </div>
-            <form class="download-share-btns flex space-between">
-              <a class="btn-export share" href="">Share</a>
-              <a class="btn-export download" href="#" onclick="onDownLoadImg(this)" download="Funny-meme.jpg">Download</a>
-            </form>
+
+            <select class="font-selector" onchange="onChangeFont(event,this)">
+              <option value="impact">impact</option>
+              <option value="Times New Roman">Times New Roman</option>
+              <option value="Verdana">Verdana</option>
+              <option value="Comic sans MS">Comic sans MS</option>
+              <option value="WildWest">WildWest</option>
+              <option value="Bedrock">Bedrock</option>
+            </select>
+          </div>
+          <form class="download-share-btns flex space-between">
+            <a class="btn-export share" href="">Share</a>
+            <a
+              class="btn-export download"
+              href="#"
+              onclick="onDownLoadImg(this)"
+              download="Funny-meme.jpg"
+              >Download</a
+            >
+          </form>
         </section>
       </section>
       <section class="gallery-container main-container">
-          <header class="gallery-header flex wrap justify-center align-center">
-              <form class="search-container">
-                  <input type="text" name="search" class="search" placeholder="Search">
-              </form>
-              <div class="hot-words-container">
-                <ul class="hot-words grid clean-list align-center">
-                    <li><a href="">Funny</a></li>
-                    <li><a href="">Animal</a></li>
-                    <li><a href="">Men</a></li>
-                    <li><a href="">Women</a></li>
-                    <li><a href="">Smile</a></li>
-                </ul>
-            </div>
-            <button class="btn-more gradient-background">More</button>
-          </header>
+        <header class="gallery-header flex wrap justify-center align-center">
+          <form class="search-container">
+            <input
+              type="text"
+              name="search"
+              class="search"
+              placeholder="Search"
+            />
+          </form>
+          <div class="hot-words-container">
+            <ul class="hot-words grid clean-list align-center">
+              <li><a href="">Funny</a></li>
+              <li><a href="">Animal</a></li>
+              <li><a href="">Men</a></li>
+              <li><a href="">Women</a></li>
+              <li><a href="">Smile</a></li>
+            </ul>
+          </div>
+          <button class="btn-more gradient-background">More</button>
+        </header>
         <section class="img-container grid align-center justify-center">
           <img class="img-item" src="images\1.jpg" onclick="onPickImage(1)" />
           <img class="img-item" src="images\2.jpg" onclick="onPickImage(2)" />
@@ -117,9 +133,19 @@
           <img class="img-item" src="images\16.jpg" onclick="onPickImage(16)" />
           <img class="img-item" src="images\17.jpg" onclick="onPickImage(17)" />
           <img class="img-item" src="images\18.jpg" onclick="onPickImage(18)" />
+          <img class="img-item" src="images\19.jpg" onclick="onPickImage(19)" />
+          <img class="img-item" src="images\20.jpg" onclick="onPickImage(20)" />
+          <img class="img-item" src="images\21.jpg" onclick="onPickImage(21)" />
+          <img class="img-item" src="images\22.jpg" onclick="onPickImage(22)" />
+          <img class="img-item" src="images\23.jpg" onclick="onPickImage(23)" />
+          <img class="img-item" src="images\24.jpg" onclick="onPickImage(24)" />
+          <img class="img-item" src="images\25.jpg" onclick="onPickImage(25)" />
         </section>
       </section>
     </main>
+    <footer class="footer">
+      <small>By Dennis.I</small>
+    </footer>
 
     <script src="js/services/button-service.js"></script>
     <script src="js/services/draw-service.js"></script>
