--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </header>
     <main class="main-container">
-      <section class="meme-editor main-container flex space-between hide">
+      <section class="meme-editor main-container flex space-between hide wrap">
         <div class="canvas-container-outline">
           <div class="canvas-container">
             <canvas width="486" height="321"></canvas>
